--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
 }
+
 body{
-    
     background-image: url("bg.png");
 }
 .errorMsg{
@@ -61,6 +64,7 @@ body{
 
 .body {
     width: 50%; 
+    height: 100vh;
     padding: 50px;
     margin: auto;
     border: 1px solid rgb(190, 189, 189);
@@ -70,7 +74,7 @@ body{
     width: 50%;
     margin-top: 20px;
     border-collapse: collapse;
-    visibility: hidden;
+    display: none;
 }
 
 td {
